
-- Four new resampling methods are available for use in the auxiliary and bootstrap filters.  Resampling methods can be specified by the resamplingMethod control list argument to buildBootstrapFilter and buildAuxiliaryFilter.

BUG FIXES

-- Slice, AFSS, and ESS samplers now have a maximum number of contractions to avoid infinite loops under unusual circumstances.

-- Fixed error in generating getParam nodeFunctions with user-supplied distributions using integer types.

-- In multivariate distribution arguments, general expressions continue to be disallowed, but expressions inside indexing brackets are now allowed. This allows, e.g., hidden Markov models implemented with a transition matrix and dcat to describe the time-dependence of latent states.

-- Fixed bug involving getDependencies with downstream = TRUE.

-- Fixed bug with using setSize in uncompiled nimbleFunction.

-- Fixed bug in AF_slice sampler causing incorrect dependency updating that affected state-space type models with intermediate deterministic nodes.

-- Fixed issues with setInits in complicated cases.

DEVELOPER LEVEL CHANGES

-- Updated some testing to function better with version 2.0.0 of testthat.

-- Now allow "to" to be a CmodelValues in R version of nimCopy.

-- Added better error trapping when an array is used with an index before it has been created in a nimbleFunction.

-- Fixed infinite recursion issue.

-- Better error message when invalid parameter name supplied to getParam.

-- Added a check that there is a return statement when a returnType is provided.

-- Improved error trapping for invalid indexing in BUGS models.

                           CHANGES IN VERSION 0.6-10 (March 2018)

USER LEVEL CHANGES

-- Data can now be provided as a numeric data frame rather than a matrix.

-- To run WAIC, a user now must set 'enableWAIC' to 'TRUE', either in NIMBLE's options or as an argument to buildMCMC().
